--- a/firstVaadinApp/src/main/resources/com/perceptiva/test/firstDesign.html
+++ b/firstVaadinApp/src/main/resources/com/perceptiva/test/firstDesign.html
@@ -16,11 +16,10 @@
    </vaadin-horizontal-layout> 
    <vaadin-vertical-layout size-full :expand> 
     <vaadin-horizontal-layout caption="peliculas para ver" width-full margin> 
-     <vaadin-label icon="http://1.bp.blogspot.com/_zc5Q7x6F2is/SgOFI2qwOGI/AAAAAAAAAqQ/J_k6xbHaORs/s320/200px-Wolverinetheatricalposter_a.jpg" size-auto _id="lblImagen1"></vaadin-label> 
-     <vaadin-image icon="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/X-Men_Days_of_Future_Past_poster.jpg/200px-X-Men_Days_of_Future_Past_poster.jpg" _id="lblImagen2"></vaadin-image> 
-     <vaadin-image icon="http://3.bp.blogspot.com/_gT2m9eX8MoM/THQ-p5RZMhI/AAAAAAAALCM/6w3LCkRCl6Q/s320/200px-Smallville-Season-9-smallville-6565079-1200-927.jpg" _id="lblImagen3"></vaadin-image> 
-     <vaadin-image icon="http://1.bp.blogspot.com/-_FrAY-xEK1I/UZ5m2e5FGII/AAAAAAAAbyE/dOFdPbcmebo/s400/200px-Robopocalypse_Book_Cover.jpg" _id="lblImagen4"></vaadin-image> 
-     <vaadin-native-button icon="http://1.bp.blogspot.com/_zc5Q7x6F2is/SgOFI2qwOGI/AAAAAAAAAqQ/J_k6xbHaORs/s320/200px-Wolverinetheatricalposter_a.jpg" _id="btnWolverine" href="deps/vaadin-core-elements/vaadin-core-elements.html"></vaadin-native-button> 
+     <vaadin-native-button icon="http://1.bp.blogspot.com/_zc5Q7x6F2is/SgOFI2qwOGI/AAAAAAAAAqQ/J_k6xbHaORs/s320/200px-Wolverinetheatricalposter_a.jpg" plain-text _id="btnWolverine"></vaadin-native-button> 
+     <vaadin-native-button icon="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/X-Men_Days_of_Future_Past_poster.jpg/200px-X-Men_Days_of_Future_Past_poster.jpg" plain-text _id="btnXMen"></vaadin-native-button> 
+     <vaadin-native-button icon="http://3.bp.blogspot.com/_gT2m9eX8MoM/THQ-p5RZMhI/AAAAAAAALCM/6w3LCkRCl6Q/s320/200px-Smallville-Season-9-smallville-6565079-1200-927.jpg" plain-text _id="btnSuperman"></vaadin-native-button> 
+     <vaadin-native-button icon="http://1.bp.blogspot.com/-_FrAY-xEK1I/UZ5m2e5FGII/AAAAAAAAbyE/dOFdPbcmebo/s400/200px-Robopocalypse_Book_Cover.jpg" plain-text _id="btnRobocosa"></vaadin-native-button> 
     </vaadin-horizontal-layout> 
    </vaadin-vertical-layout> 
   </vaadin-vertical-layout>  
